// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SingleSelect component should close options when clicked outside 1`] = `
.c13 {
  font-size: 14px;
  font-weight: 400;
  color: inherit;
}

.c1 {
  margin: 8px 8px 8px 0px;
  display: inline-grid;
  grid-template-columns: minmax(max-content,25%) minmax(auto,80%);
  grid-template-areas: 'label field' 'random description';
  grid-template-columns: auto;
  grid-template-areas: 'field' 'description';
}

.c1 .c15 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c4 {
  margin: 8px 8px 8px 0px;
  display: inline-grid;
  grid-template-areas: 'label' 'field' 'description';
  grid-template-columns: auto;
  grid-template-areas: 'field' 'description';
}

.c4 .c15 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 {
  padding: 8px;
  font-size: 14px;
  font-weight: 400;
  color: #555;
  background-color: #ffffff;
  background-clip: padding-box;
  box-sizing: border-box;
  border: 1px solid #CCCCCC;
  border-radius: 5px;
}

.c6:focus {
  border-color: #012040;
  outline: 0;
}

.c6::-webkit-input-placeholder {
  color: #999999;
}

.c6::-moz-placeholder {
  color: #999999;
}

.c6:-ms-input-placeholder {
  color: #999999;
}

.c6::placeholder {
  color: #999999;
}

.c6::-webkit-file-upload-button {
  visibility: hidden;
}

.c10 {
  position: absolute;
  z-index: 1000;
  display: none;
  -webkit-transition: all 2ms ease-in-out;
  transition: all 2ms ease-in-out;
  border-radius: 4px;
  width: calc(100% - 0px);
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
}

.c2 .c9 {
  top: calc(100% + 5px);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c12 {
  cursor: pointer;
  padding: 5px;
  color: inherit;
  background-color: #ffffff;
}

.c12:last-child {
  border-bottom-left-radius: 3px;
  border-bottom-right-radius: 3px;
}

.c12:first-child {
  border-top-left-radius: 3px;
  border-top-right-radius: 3px;
}

.c11 {
  list-style: none;
  padding: 0px;
  margin: 0px;
  max-height: 200px;
  overflow: auto;
  border: 1px solid #CCCCCC;
  background-color: #ffffff;
  box-sizing: border-box;
  border-radius: 4px;
}

.c8 {
  font-size: 16px;
  cursor: inherit;
}

.c8 * {
  fill: #555;
}

.c3 {
  border: 1px solid #CCCCCC;
  background-color: #ffffff;
  cursor: pointer;
  border-radius: 4px;
  box-sizing: border-box;
  overflow: hidden;
  height: 35px;
  min-width: 150px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 .c0 {
  margin: 0px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c3 .c0 .c5 {
  margin: 0px;
  border: none;
  background-color: transparent;
}

.c3 * {
  cursor: pointer;
}

.c14 .c0 {
  margin: 0px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c14 .c0 .c5 {
  margin: 0px;
  border: none;
  background-color: transparent;
}

.c7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 20px;
  margin-right: 8px;
  font-size: 10px;
}

<div>
  <p>
    Outer
  </p>
  <div
    class="c0 c1"
  >
    
    <div
      class="c2"
      data-testid="popover-wrapper"
    >
      <div
        class="c3"
      >
        <div
          class="c0 c4"
        >
          
          <input
            class="c5 c6"
            data-testid="select-input"
            id="select-input"
            label=""
            placeholder="Please Select . . ."
            type="text"
            value=""
          />
          
        </div>
        <svg
          class="c7 c8"
          height="1em"
          theme="[object Object]"
          viewBox="0 0 12 8"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.59.59L6 5.17 1.41.59 0 2l6 6 6-6z"
            fill="#012040"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="c9 c10"
        style="display: none;"
      >
        <ul
          class="c11"
        >
          <li
            class="c12"
          >
            <span
              class="c13"
            >
              All
            </span>
          </li>
          <li
            class="c12"
          >
            <span
              class="c13"
            >
              Dummy1
            </span>
          </li>
          <li
            class="c12"
          >
            <span
              class="c13"
            >
              Dummy2
            </span>
          </li>
        </ul>
      </div>
    </div>
    
  </div>
</div>
`;

exports[`SingleSelect component should not render options when clicked outside 1`] = `
.c13 {
  font-size: 14px;
  font-weight: 400;
  color: inherit;
}

.c1 {
  margin: 8px 8px 8px 0px;
  display: inline-grid;
  grid-template-columns: minmax(max-content,25%) minmax(auto,80%);
  grid-template-areas: 'label field' 'random description';
  grid-template-columns: auto;
  grid-template-areas: 'field' 'description';
}

.c1 .c15 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c4 {
  margin: 8px 8px 8px 0px;
  display: inline-grid;
  grid-template-areas: 'label' 'field' 'description';
  grid-template-columns: auto;
  grid-template-areas: 'field' 'description';
}

.c4 .c15 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 {
  padding: 8px;
  font-size: 14px;
  font-weight: 400;
  color: #555;
  background-color: #ffffff;
  background-clip: padding-box;
  box-sizing: border-box;
  border: 1px solid #CCCCCC;
  border-radius: 5px;
}

.c6:focus {
  border-color: #012040;
  outline: 0;
}

.c6::-webkit-input-placeholder {
  color: #999999;
}

.c6::-moz-placeholder {
  color: #999999;
}

.c6:-ms-input-placeholder {
  color: #999999;
}

.c6::placeholder {
  color: #999999;
}

.c6::-webkit-file-upload-button {
  visibility: hidden;
}

.c10 {
  position: absolute;
  z-index: 1000;
  display: none;
  -webkit-transition: all 2ms ease-in-out;
  transition: all 2ms ease-in-out;
  border-radius: 4px;
  width: calc(100% - 0px);
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
}

.c2 .c9 {
  top: calc(100% + 5px);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c12 {
  cursor: pointer;
  padding: 5px;
  color: inherit;
  background-color: #ffffff;
}

.c12:last-child {
  border-bottom-left-radius: 3px;
  border-bottom-right-radius: 3px;
}

.c12:first-child {
  border-top-left-radius: 3px;
  border-top-right-radius: 3px;
}

.c11 {
  list-style: none;
  padding: 0px;
  margin: 0px;
  max-height: 200px;
  overflow: auto;
  border: 1px solid #CCCCCC;
  background-color: #ffffff;
  box-sizing: border-box;
  border-radius: 4px;
}

.c8 {
  font-size: 16px;
  cursor: inherit;
}

.c8 * {
  fill: #555;
}

.c3 {
  border: 1px solid #CCCCCC;
  background-color: #ffffff;
  cursor: pointer;
  border-radius: 4px;
  box-sizing: border-box;
  overflow: hidden;
  height: 35px;
  min-width: 150px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 .c0 {
  margin: 0px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c3 .c0 .c5 {
  margin: 0px;
  border: none;
  background-color: transparent;
}

.c3 * {
  cursor: pointer;
}

.c14 .c0 {
  margin: 0px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c14 .c0 .c5 {
  margin: 0px;
  border: none;
  background-color: transparent;
}

.c7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 20px;
  margin-right: 8px;
  font-size: 10px;
}

<div>
  <div>
    <p>
      Outer Element
    </p>
    <div
      class="c0 c1"
    >
      
      <div
        class="c2"
        data-testid="popover-wrapper"
      >
        <div
          class="c3"
        >
          <div
            class="c0 c4"
          >
            
            <input
              class="c5 c6"
              data-testid="select-input"
              id="select-input"
              label=""
              placeholder="Please Select . . ."
              type="text"
              value=""
            />
            
          </div>
          <svg
            class="c7 c8"
            height="1em"
            theme="[object Object]"
            viewBox="0 0 12 8"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.59.59L6 5.17 1.41.59 0 2l6 6 6-6z"
              fill="#012040"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="c9 c10"
        >
          <ul
            class="c11"
          >
            <li
              class="c12"
            >
              <span
                class="c13"
              >
                All
              </span>
            </li>
            <li
              class="c12"
            >
              <span
                class="c13"
              >
                Dummy1
              </span>
            </li>
            <li
              class="c12"
            >
              <span
                class="c13"
              >
                Dummy2
              </span>
            </li>
          </ul>
        </div>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`SingleSelect component should not render options when clicked outside 2`] = `
<div>
  <div>
    <p>
      Outer Element
    </p>
    <div
      class="sc-EHOje fJgYca"
    >
      
      <div
        class="sc-htoDjs kyXQsz"
        data-testid="popover-wrapper"
      >
        <div
          class="sc-jTzLTM cEibhI"
        >
          <div
            class="sc-EHOje ezXioy"
          >
            
            <input
              class="sc-bZQynM XHRoh"
              data-testid="select-input"
              id="select-input"
              label=""
              placeholder="Please Select . . ."
              type="text"
              value=""
            />
            
          </div>
          <svg
            class="sc-fjdhpX iEtKxJ sc-gZMcBi kLaBzw"
            height="1em"
            theme="[object Object]"
            viewBox="0 0 12 8"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.59.59L6 5.17 1.41.59 0 2l6 6 6-6z"
              fill="#012040"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="sc-gzVnrw jrhrGM"
          style="display: none;"
        >
          <ul
            class="sc-iwsKbI jHcpLx"
          >
            <li
              class="sc-dnqmqq lhTpTY"
            >
              <span
                class="sc-bwzfXH jvAtFl"
              >
                All
              </span>
            </li>
            <li
              class="sc-dnqmqq lhTpTY"
            >
              <span
                class="sc-bwzfXH jvAtFl"
              >
                Dummy1
              </span>
            </li>
            <li
              class="sc-dnqmqq lhTpTY"
            >
              <span
                class="sc-bwzfXH jvAtFl"
              >
                Dummy2
              </span>
            </li>
          </ul>
        </div>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`SingleSelect component should render all the options when input value is not matched to any option 1`] = `
.c13 {
  font-size: 14px;
  font-weight: 400;
  color: inherit;
}

.c1 {
  margin: 8px 8px 8px 0px;
  display: inline-grid;
  grid-template-columns: minmax(max-content,25%) minmax(auto,80%);
  grid-template-areas: 'label field' 'random description';
  grid-template-columns: auto;
  grid-template-areas: 'field' 'description';
}

.c1 .c15 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c4 {
  margin: 8px 8px 8px 0px;
  display: inline-grid;
  grid-template-areas: 'label' 'field' 'description';
  grid-template-columns: auto;
  grid-template-areas: 'field' 'description';
}

.c4 .c15 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 {
  padding: 8px;
  font-size: 14px;
  font-weight: 400;
  color: #555;
  background-color: #ffffff;
  background-clip: padding-box;
  box-sizing: border-box;
  border: 1px solid #CCCCCC;
  border-radius: 5px;
}

.c6:focus {
  border-color: #012040;
  outline: 0;
}

.c6::-webkit-input-placeholder {
  color: #999999;
}

.c6::-moz-placeholder {
  color: #999999;
}

.c6:-ms-input-placeholder {
  color: #999999;
}

.c6::placeholder {
  color: #999999;
}

.c6::-webkit-file-upload-button {
  visibility: hidden;
}

.c10 {
  position: absolute;
  z-index: 1000;
  display: none;
  -webkit-transition: all 2ms ease-in-out;
  transition: all 2ms ease-in-out;
  border-radius: 4px;
  width: calc(100% - 0px);
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
}

.c2 .c9 {
  top: calc(100% + 5px);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c12 {
  cursor: pointer;
  padding: 5px;
  color: inherit;
  background-color: #ffffff;
}

.c12:last-child {
  border-bottom-left-radius: 3px;
  border-bottom-right-radius: 3px;
}

.c12:first-child {
  border-top-left-radius: 3px;
  border-top-right-radius: 3px;
}

.c11 {
  list-style: none;
  padding: 0px;
  margin: 0px;
  max-height: 200px;
  overflow: auto;
  border: 1px solid #CCCCCC;
  background-color: #ffffff;
  box-sizing: border-box;
  border-radius: 4px;
}

.c8 {
  font-size: 16px;
  cursor: inherit;
}

.c8 * {
  fill: #555;
}

.c3 {
  border: 1px solid #CCCCCC;
  background-color: #ffffff;
  cursor: pointer;
  border-radius: 4px;
  box-sizing: border-box;
  overflow: hidden;
  height: 35px;
  min-width: 150px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 .c0 {
  margin: 0px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c3 .c0 .c5 {
  margin: 0px;
  border: none;
  background-color: transparent;
}

.c3 * {
  cursor: pointer;
}

.c14 .c0 {
  margin: 0px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c14 .c0 .c5 {
  margin: 0px;
  border: none;
  background-color: transparent;
}

.c7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 20px;
  margin-right: 8px;
  font-size: 10px;
}

<div>
  <div
    class="c0 c1"
  >
    
    <div
      class="c2"
      data-testid="popover-wrapper"
    >
      <div
        class="c3"
      >
        <div
          class="c0 c4"
        >
          
          <input
            class="c5 c6"
            data-testid="select-input"
            id="select-input"
            label=""
            placeholder="Please Select . . ."
            type="text"
            value="Hello"
          />
          
        </div>
        <svg
          class="c7 c8"
          height="1em"
          theme="[object Object]"
          viewBox="0 0 12 8"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.59.59L6 5.17 1.41.59 0 2l6 6 6-6z"
            fill="#012040"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="c9 c10"
        style="display: block;"
      >
        <ul
          class="c11"
        >
          <li
            class="c12"
          >
            <span
              class="c13"
            >
              All
            </span>
          </li>
          <li
            class="c12"
          >
            <span
              class="c13"
            >
              Dummy1
            </span>
          </li>
          <li
            class="c12"
          >
            <span
              class="c13"
            >
              Dummy2
            </span>
          </li>
        </ul>
      </div>
    </div>
    
  </div>
</div>
`;

exports[`SingleSelect component should render correctly with all the props given 1`] = `
.c3 {
  font-size: 14px;
  font-weight: 400;
  color: #555;
  margin: 0px 8px 0px 0px;
}

.c3::after {
  color: red;
  content: ' *';
}

.c14 {
  font-size: 14px;
  font-weight: 400;
  color: inherit;
}

.c2 {
  grid-area: label;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c13 {
  grid-area: description;
  margin: 5px 0px 0px 2px;
  color: #818A91;
}

.c6 {
  margin: 8px 8px 8px 0px;
  display: inline-grid;
  grid-template-areas: 'label' 'field' 'description';
  grid-template-columns: auto;
  grid-template-areas: 'field' 'description';
}

.c6 .c16 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  margin: 8px 0px;
  display: grid;
  min-width: 300px;
  grid-template-columns: minmax(max-content,25%) minmax(auto,80%);
  grid-template-areas: 'label field' 'random description';
}

.c1 .c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c8 {
  padding: 8px;
  font-size: 14px;
  font-weight: 400;
  color: #555;
  background-color: #ededed;
  background-clip: padding-box;
  box-sizing: border-box;
  border: 1px solid #CCCCCC;
  border-radius: 5px;
}

.c8:focus {
  border-color: #012040;
  outline: 0;
}

.c8::-webkit-input-placeholder {
  color: #999999;
}

.c8::-moz-placeholder {
  color: #999999;
}

.c8:-ms-input-placeholder {
  color: #999999;
}

.c8::placeholder {
  color: #999999;
}

.c8::-webkit-file-upload-button {
  visibility: hidden;
}

.c12 {
  position: absolute;
  z-index: 1000;
  display: none;
  -webkit-transition: all 2ms ease-in-out;
  transition: all 2ms ease-in-out;
  border-radius: 4px;
  width: calc(100% - 0px);
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
}

.c4 .c11 {
  top: calc(100% + 5px);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c10 {
  font-size: 16px;
  cursor: inherit;
}

.c10 * {
  fill: #555;
}

.c15 .c0 {
  margin: 0px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c15 .c0 .c7 {
  margin: 0px;
  border: none;
  background-color: transparent;
}

.c5 {
  border: 1px solid #CCCCCC;
  background-color: #ededed;
  cursor: not-allowed;
  border-radius: 4px;
  box-sizing: border-box;
  overflow: hidden;
  height: 35px;
  min-width: 150px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: calc(100% - 0px);
}

.c5 .c0 {
  margin: 0px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c5 .c0 .c7 {
  margin: 0px;
  border: none;
  background-color: transparent;
}

.c5 * {
  cursor: not-allowed;
}

.c9 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 20px;
  margin-right: 8px;
  font-size: 10px;
}

<div>
  <div
    class="c0 c1"
  >
    <label
      class="c2 c3"
      required=""
    >
      Pharmacy
    </label>
    <div
      class="c4"
      data-testid="popover-wrapper"
    >
      <div
        class="c5"
        disabled=""
      >
        <div
          class="c0 c6"
        >
          
          <input
            class="c7 c8"
            data-testid="select-input"
            disabled=""
            id="select-input"
            label=""
            placeholder="Please Select"
            required=""
            type="text"
            value="All"
          />
          
        </div>
        <svg
          class="c9 c10"
          height="1em"
          theme="[object Object]"
          viewBox="0 0 12 8"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.59.59L6 5.17 1.41.59 0 2l6 6 6-6z"
            fill="#012040"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="c11 c12"
      />
    </div>
    <span
      class="c13 c14"
    >
      We will show reports based on Pharmacy
    </span>
  </div>
</div>
`;

exports[`SingleSelect component should render correctly with default props 1`] = `
.c13 {
  font-size: 14px;
  font-weight: 400;
  color: inherit;
}

.c1 {
  margin: 8px 8px 8px 0px;
  display: inline-grid;
  grid-template-columns: minmax(max-content,25%) minmax(auto,80%);
  grid-template-areas: 'label field' 'random description';
  grid-template-columns: auto;
  grid-template-areas: 'field' 'description';
}

.c1 .c14 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c4 {
  margin: 8px 8px 8px 0px;
  display: inline-grid;
  grid-template-areas: 'label' 'field' 'description';
  grid-template-columns: auto;
  grid-template-areas: 'field' 'description';
}

.c4 .c14 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 {
  padding: 8px;
  font-size: 14px;
  font-weight: 400;
  color: #555;
  background-color: #ffffff;
  background-clip: padding-box;
  box-sizing: border-box;
  border: 1px solid #CCCCCC;
  border-radius: 5px;
}

.c6:focus {
  border-color: #012040;
  outline: 0;
}

.c6::-webkit-input-placeholder {
  color: #999999;
}

.c6::-moz-placeholder {
  color: #999999;
}

.c6:-ms-input-placeholder {
  color: #999999;
}

.c6::placeholder {
  color: #999999;
}

.c6::-webkit-file-upload-button {
  visibility: hidden;
}

.c10 {
  position: absolute;
  z-index: 1000;
  display: none;
  -webkit-transition: all 2ms ease-in-out;
  transition: all 2ms ease-in-out;
  border-radius: 4px;
  width: calc(100% - 0px);
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
}

.c2 .c9 {
  top: calc(100% + 5px);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c12 {
  cursor: pointer;
  padding: 5px;
  color: inherit;
  background-color: #ffffff;
}

.c12:last-child {
  border-bottom-left-radius: 3px;
  border-bottom-right-radius: 3px;
}

.c12:first-child {
  border-top-left-radius: 3px;
  border-top-right-radius: 3px;
}

.c11 {
  list-style: none;
  padding: 0px;
  margin: 0px;
  max-height: 200px;
  overflow: auto;
  border: 1px solid #CCCCCC;
  background-color: #ffffff;
  box-sizing: border-box;
  border-radius: 4px;
}

.c8 {
  font-size: 16px;
  cursor: inherit;
}

.c8 * {
  fill: #555;
}

.c3 {
  border: 1px solid #CCCCCC;
  background-color: #ffffff;
  cursor: pointer;
  border-radius: 4px;
  box-sizing: border-box;
  overflow: hidden;
  height: 35px;
  min-width: 150px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 .c0 {
  margin: 0px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c3 .c0 .c5 {
  margin: 0px;
  border: none;
  background-color: transparent;
}

.c3 * {
  cursor: pointer;
}

.c7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 20px;
  margin-right: 8px;
  font-size: 10px;
}

<div>
  <div
    class="c0 c1"
  >
    
    <div
      class="c2"
      data-testid="popover-wrapper"
    >
      <div
        class="c3"
      >
        <div
          class="c0 c4"
        >
          
          <input
            class="c5 c6"
            data-testid="select-input"
            id="select-input"
            label=""
            placeholder="Please Select . . ."
            type="text"
            value=""
          />
          
        </div>
        <svg
          class="c7 c8"
          height="1em"
          theme="[object Object]"
          viewBox="0 0 12 8"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.59.59L6 5.17 1.41.59 0 2l6 6 6-6z"
            fill="#012040"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="c9 c10"
      >
        <ul
          class="c11"
        >
          <li
            class="c12"
          >
            <span
              class="c13"
            >
              All
            </span>
          </li>
          <li
            class="c12"
          >
            <span
              class="c13"
            >
              Dummy1
            </span>
          </li>
          <li
            class="c12"
          >
            <span
              class="c13"
            >
              Dummy2
            </span>
          </li>
        </ul>
      </div>
    </div>
    
  </div>
</div>
`;

exports[`SingleSelect component should render matched options when input values changes 1`] = `
.c13 {
  font-size: 14px;
  font-weight: 400;
  color: inherit;
}

.c1 {
  margin: 8px 8px 8px 0px;
  display: inline-grid;
  grid-template-columns: minmax(max-content,25%) minmax(auto,80%);
  grid-template-areas: 'label field' 'random description';
  grid-template-columns: auto;
  grid-template-areas: 'field' 'description';
}

.c1 .c15 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c4 {
  margin: 8px 8px 8px 0px;
  display: inline-grid;
  grid-template-areas: 'label' 'field' 'description';
  grid-template-columns: auto;
  grid-template-areas: 'field' 'description';
}

.c4 .c15 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 {
  padding: 8px;
  font-size: 14px;
  font-weight: 400;
  color: #555;
  background-color: #ffffff;
  background-clip: padding-box;
  box-sizing: border-box;
  border: 1px solid #CCCCCC;
  border-radius: 5px;
}

.c6:focus {
  border-color: #012040;
  outline: 0;
}

.c6::-webkit-input-placeholder {
  color: #999999;
}

.c6::-moz-placeholder {
  color: #999999;
}

.c6:-ms-input-placeholder {
  color: #999999;
}

.c6::placeholder {
  color: #999999;
}

.c6::-webkit-file-upload-button {
  visibility: hidden;
}

.c10 {
  position: absolute;
  z-index: 1000;
  display: none;
  -webkit-transition: all 2ms ease-in-out;
  transition: all 2ms ease-in-out;
  border-radius: 4px;
  width: calc(100% - 0px);
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
}

.c2 .c9 {
  top: calc(100% + 5px);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c12 {
  cursor: pointer;
  padding: 5px;
  color: inherit;
  background-color: #ffffff;
}

.c12:last-child {
  border-bottom-left-radius: 3px;
  border-bottom-right-radius: 3px;
}

.c12:first-child {
  border-top-left-radius: 3px;
  border-top-right-radius: 3px;
}

.c11 {
  list-style: none;
  padding: 0px;
  margin: 0px;
  max-height: 200px;
  overflow: auto;
  border: 1px solid #CCCCCC;
  background-color: #ffffff;
  box-sizing: border-box;
  border-radius: 4px;
}

.c8 {
  font-size: 16px;
  cursor: inherit;
}

.c8 * {
  fill: #555;
}

.c3 {
  border: 1px solid #CCCCCC;
  background-color: #ffffff;
  cursor: pointer;
  border-radius: 4px;
  box-sizing: border-box;
  overflow: hidden;
  height: 35px;
  min-width: 150px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 .c0 {
  margin: 0px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c3 .c0 .c5 {
  margin: 0px;
  border: none;
  background-color: transparent;
}

.c3 * {
  cursor: pointer;
}

.c14 .c0 {
  margin: 0px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c14 .c0 .c5 {
  margin: 0px;
  border: none;
  background-color: transparent;
}

.c7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 20px;
  margin-right: 8px;
  font-size: 10px;
}

<div>
  <div
    class="c0 c1"
  >
    
    <div
      class="c2"
      data-testid="popover-wrapper"
    >
      <div
        class="c3"
      >
        <div
          class="c0 c4"
        >
          
          <input
            class="c5 c6"
            data-testid="select-input"
            id="select-input"
            label=""
            placeholder="Please Select . . ."
            type="text"
            value="Dummy"
          />
          
        </div>
        <svg
          class="c7 c8"
          height="1em"
          theme="[object Object]"
          viewBox="0 0 12 8"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.59.59L6 5.17 1.41.59 0 2l6 6 6-6z"
            fill="#012040"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="c9 c10"
        style="display: block;"
      >
        <ul
          class="c11"
        >
          <li
            class="c12"
          >
            <span
              class="c13"
            >
              Dummy1
            </span>
          </li>
          <li
            class="c12"
          >
            <span
              class="c13"
            >
              Dummy2
            </span>
          </li>
        </ul>
      </div>
    </div>
    
  </div>
</div>
`;

exports[`SingleSelect component should render options correctly 1`] = `
.c13 {
  font-size: 14px;
  font-weight: 400;
  color: inherit;
}

.c1 {
  margin: 8px 8px 8px 0px;
  display: inline-grid;
  grid-template-columns: minmax(max-content,25%) minmax(auto,80%);
  grid-template-areas: 'label field' 'random description';
  grid-template-columns: auto;
  grid-template-areas: 'field' 'description';
}

.c1 .c15 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c4 {
  margin: 8px 8px 8px 0px;
  display: inline-grid;
  grid-template-areas: 'label' 'field' 'description';
  grid-template-columns: auto;
  grid-template-areas: 'field' 'description';
}

.c4 .c15 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 {
  padding: 8px;
  font-size: 14px;
  font-weight: 400;
  color: #555;
  background-color: #ffffff;
  background-clip: padding-box;
  box-sizing: border-box;
  border: 1px solid #CCCCCC;
  border-radius: 5px;
}

.c6:focus {
  border-color: #012040;
  outline: 0;
}

.c6::-webkit-input-placeholder {
  color: #999999;
}

.c6::-moz-placeholder {
  color: #999999;
}

.c6:-ms-input-placeholder {
  color: #999999;
}

.c6::placeholder {
  color: #999999;
}

.c6::-webkit-file-upload-button {
  visibility: hidden;
}

.c10 {
  position: absolute;
  z-index: 1000;
  display: none;
  -webkit-transition: all 2ms ease-in-out;
  transition: all 2ms ease-in-out;
  border-radius: 4px;
  width: calc(100% - 0px);
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
}

.c2 .c9 {
  top: calc(100% + 5px);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c12 {
  cursor: pointer;
  padding: 5px;
  color: inherit;
  background-color: #ffffff;
}

.c12:last-child {
  border-bottom-left-radius: 3px;
  border-bottom-right-radius: 3px;
}

.c12:first-child {
  border-top-left-radius: 3px;
  border-top-right-radius: 3px;
}

.c11 {
  list-style: none;
  padding: 0px;
  margin: 0px;
  max-height: 200px;
  overflow: auto;
  border: 1px solid #CCCCCC;
  background-color: #ffffff;
  box-sizing: border-box;
  border-radius: 4px;
}

.c8 {
  font-size: 16px;
  cursor: inherit;
}

.c8 * {
  fill: #555;
}

.c3 {
  border: 1px solid #CCCCCC;
  background-color: #ffffff;
  cursor: pointer;
  border-radius: 4px;
  box-sizing: border-box;
  overflow: hidden;
  height: 35px;
  min-width: 150px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 .c0 {
  margin: 0px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c3 .c0 .c5 {
  margin: 0px;
  border: none;
  background-color: transparent;
}

.c3 * {
  cursor: pointer;
}

.c14 .c0 {
  margin: 0px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c14 .c0 .c5 {
  margin: 0px;
  border: none;
  background-color: transparent;
}

.c7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 20px;
  margin-right: 8px;
  font-size: 10px;
}

<div>
  <div
    class="c0 c1"
  >
    
    <div
      class="c2"
      data-testid="popover-wrapper"
    >
      <div
        class="c3"
      >
        <div
          class="c0 c4"
        >
          
          <input
            class="c5 c6"
            data-testid="select-input"
            id="select-input"
            label=""
            placeholder="Please Select . . ."
            type="text"
            value=""
          />
          
        </div>
        <svg
          class="c7 c8"
          height="1em"
          theme="[object Object]"
          viewBox="0 0 12 8"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.59.59L6 5.17 1.41.59 0 2l6 6 6-6z"
            fill="#012040"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="c9 c10"
      >
        <ul
          class="c11"
        >
          <li
            class="c12"
          >
            <span
              class="c13"
            >
              All
            </span>
          </li>
          <li
            class="c12"
          >
            <span
              class="c13"
            >
              Dummy1
            </span>
          </li>
          <li
            class="c12"
          >
            <span
              class="c13"
            >
              Dummy2
            </span>
          </li>
        </ul>
      </div>
    </div>
    
  </div>
</div>
`;

exports[`SingleSelect component should render options correctly 2`] = `
<div>
  <div
    class="sc-EHOje fJgYca"
  >
    
    <div
      class="sc-htoDjs kyXQsz"
      data-testid="popover-wrapper"
    >
      <div
        class="sc-jTzLTM cEibhI"
      >
        <div
          class="sc-EHOje ezXioy"
        >
          
          <input
            class="sc-bZQynM XHRoh"
            data-testid="select-input"
            id="select-input"
            label=""
            placeholder="Please Select . . ."
            type="text"
            value=""
          />
          
        </div>
        <svg
          class="sc-fjdhpX iEtKxJ sc-gZMcBi kLaBzw"
          height="1em"
          theme="[object Object]"
          viewBox="0 0 12 8"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.59.59L6 5.17 1.41.59 0 2l6 6 6-6z"
            fill="#012040"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="sc-gzVnrw jrhrGM"
        style="display: block;"
      >
        <ul
          class="sc-iwsKbI jHcpLx"
        >
          <li
            class="sc-dnqmqq lhTpTY"
          >
            <span
              class="sc-bwzfXH jvAtFl"
            >
              All
            </span>
          </li>
          <li
            class="sc-dnqmqq lhTpTY"
          >
            <span
              class="sc-bwzfXH jvAtFl"
            >
              Dummy1
            </span>
          </li>
          <li
            class="sc-dnqmqq lhTpTY"
          >
            <span
              class="sc-bwzfXH jvAtFl"
            >
              Dummy2
            </span>
          </li>
        </ul>
      </div>
    </div>
    
  </div>
</div>
`;
